examples/java/failing/adding_two_implements/Expected.java
class SomeClass implements Foo, Bar {
        void doTheWork() {
        }
}
